--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,124 @@ a {
   color: var(--main-bg-color);
 }
 
+/****** Header + Nav ***********/
+
+header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+header img {
+  width: 60px;
+  height: 20px;
+  margin-top: 10px;
+}
+
+nav {
+  width: 20%;
+  display: flex;
+  justify-content: space-between;
+}
+
+nav a {
+  padding-top: 10px;
+  border-top: transparent solid 2px;
+}
+
+nav a:hover {
+  color: #0065fc;
+  border-top: #0065fc solid 2px;
+}
+
+/****** Section filtres ***********/
+
+h1 {
+  font-size: 22px;
+  margin: 0;
+}
+
+.filtre__search {
+  margin: 40px 0 30px 0;
+  display: flex;
+  align-items: center;
+}
+
+.fa-location-dot {
+  font-size: 18px;
+  color: black;
+  padding: 17px 15px 17px 20px;
+  background-color: #f2f2f2;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+
+input {
+  border: #f2f2f2 2px solid;
+  padding: 16px 24px;
+  text-align: center;
+}
+::placeholder {
+  font-size: 16px;
+  font-weight: bold;
+  color: black;
+}
+
+.filtre__search button {
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  background-color: #0065fc;
+  border: transparent;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  padding: 16px;
+}
+
+.filtre__radio {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 15px;
+}
+
+.filtre__radio button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: bold;
+  background-color: white;
+  border: #f2f2f2 solid 2px;
+  border-radius: 25px;
+  padding: 15px;
+}
+
+.filtre__radio i {
+  font-size: 18px;
+  padding-right: 10px;
+}
+
+.filtre__radio button:hover {
+  background-color: #deebff;
+  border-color: white;
+  cursor: pointer;
+}
+
+.filtre__result {
+  display: flex;
+  align-items: center;
+  margin: 15px 0;
+}
+
+.filtre__result i {
+  font-size: 14px;
+  border: #f2f2f2 solid 2px;
+  border-radius: 50%;
+  padding: 6px 10px;
+  margin-right: 10px;
+}
+
 /****** Hebergements And Populaires ***********/
 .hebergements-and-populaires {
   display: flex;
@@ -74,6 +192,56 @@ a {
 /****** Hebergements ***********/
 .hebergements {
   width: 65%;
+}
+
+.hebergements h2 {
+  margin: 0;
+}
+
+.hebergements h3 {
+  margin: 0;
+}
+
+.hebergements__cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 30px;
+  margin: 30px 0;
+}
+
+.hebergements__cards .card {
+  display: flex;
+  flex-direction: column;
+}
+
+.hebergements__cards .card img {
+  width: 100%;
+  height: 110px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.hebergements__cards .card-content {
+  padding: 4px 10px;
+  gap: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-sizing: border-box;
+}
+
+.hebergements__cards .card-title {
+  margin-top: 10px;
+  margin-bottom: 6px;
+}
+
+.hebergements__cards .card-subtitle {
+  margin: 0;
+}
+
+.hebergements__cards .card-rating {
+  margin-bottom: 5px;
 }
 
 /****** Populaires ***********/
